src/test/ui/terminal-width/non-whitespace-trimming-2.stderr
error[E0308]: mismatched types
  --> $DIR/non-whitespace-trimming-2.rs:4:241
   |
LL | ... = 42; let _: () = (); let _: () = (); let _: () = (); let _: () = (); let _: () = (); let _: () = (); let _: () = (); let _: () = ();...
   |       ^^ expected (), found integer
   |
   = note: expected type `()`
              found type `{integer}`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
